Fix Add Padding To Align Price And Category Blocks

--- a/css/general.css
+++ b/css/general.css
@@ -106,7 +106,7 @@ button.btn-main__active {
     background-color: var(--grey-light);
     color: var(--black);
     border-radius: 40px;
-    padding: 10px 16px;
+    padding: 9px 16px 11px;
     font-style: normal;
     font-weight: 900;
     font-size: 14px;
